# deepcell-label

./: Dockerfile  docker-compose.yaml
deploy/: caliban.py  pyproject.toml
desktop/: caliban.py
nginx/: Dockerfile  nginx.conf
visualizer/: Dockerfile
