[tool.poetry]
name = "caliban"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.7"
numpy = "1.16.0"
scikit-image = "0.15.0"
matplotlib = "3.0.2"
opencv-python = "4.2.0.32"
pyglet = "1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
